--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Planning Poker - Agile Estimation Tool</title>
     <meta name="description" content="Real-time planning poker for agile teams. Estimate user stories collaboratively with your team." />
